<resources>
    <string name="app_name">AccuTerra SDK</string>
    <string name="app_sdk_version">unknown version</string>
    <string name="close">Close</string>
    <string name="loading">Loading…</string>
    <string name="action_settings">Settings</string>
    <string name="no_records">No records</string>
    <string name="na">n/a</string>
    <string name="general_error">Error</string>

    <string name="community">Community</string>
    <string name="my_trips">My Trips</string>
    <string name="discover">Discover</string>
    <string name="profile">Profile</string>
    <string name="list">List</string>

    <string name="search_trails">Search Trails</string>
    <string name="show_all">Show All</string>

    <string name="rating_count_number">(%1$d)</string>
    <string name="no_ratings">No ratings</string>
    <string name="no_rating">No rating</string>

    <string name="distance_with_unit">%1$.1f %2$s</string>
    <string name="distance_integer_with_unit">%1$d %2$s</string>
    <string name="speed_with_unit">%1$.1f %2$s</string>
    <string name="heading_with_unit">%1$.0f %2$s</string>
    <string name="elevation_with_unit">%1$.0f %2$s</string>

    <string name="mile_unit_abbr">mi</string>
    <!-- RENAME TO FEET? -->
    <string name="foot_unit_abbr">ft</string>
    <string name="mph_unit_abbr">mph</string>
    <string name="heading_unit_abbr">°</string>
    <string name="no_trails_in_this_area">No trails in this area.</string>
    <string name="multiple_trails_in_this_area">Multiple trails in this area.</string>
    <string name="multiple_pois_in_this_area">Multiple trail POIs in this area.</string>
    <string name="get_there">Get There</string>
    <string name="saved">Saved</string>
    <string name="start">Start</string>
    <string name="description">Description</string>
    <string name="developer">Developer</string>
    <string name="details">Details</string>
    <string name="forecast">Forecast</string>
    <string name="reviews">Reviews</string>
    <string name="discussion">Discussion</string>

    <string name="demo_activity_downloading_trail_db">Downloading TRAIL DB</string>
    <string name="demo_activity_unpacking_trail_db">Unpacking TRAIL DB</string>
    <string name="demo_activity_updating_trail_db">Updating TRAIL DB</string>
    <string name="demo_activity_updating_trail_user_data">Updating Trail User Data</string>
    <string name="demo_activity_updating_trail_dynamic_data">Updating Trail Dynamic Data</string>
    <string name="demo_activity_init_trail_paths_cache">Initializing Trail Paths Cache</string>
    <string name="demo_activity_init_trail_markers_cache">Initializing Trail Markers Cache</string>


    <string name="maximum_difficulty">Maximum Difficulty</string>
    <string name="minimum_user_rating">Minimum User Rating</string>
    <string name="maximum_trip_distance">Maximum Trip Distance</string>
    <string name="any">Any</string>
    <string name="upwards_arrow_character">↑</string>
    <string name="downwards_arrow_character">↓</string>
    <string name="chequered_flag_character">🏁</string>
    <string name="driving_mode">Driving Mode</string>
    <string name="download">Download</string>
    <string name="download_percents">%1$d %%</string>
    <string name="downloading_percents">Downloading %1$d %%</string>
    <string name="estimated_download_size">Estimated download size %1$s</string>
    <string name="queued">Queued</string>
    <string name="cancelled">Cancelled</string>

    <string name="download_overlay_prompt">Would you like to download Overlay map cache (~%1$s).</string>
    <string name="download_trail_prompt">Would you like to download trail map cache (~%1$s).</string>
    <string name="download_trail_low_space_title">Low Space</string>
    <string name="download_trail_low_space_message">There is not enough disk space to download the trail.</string>
    <string name="downloading_cache">Downloading Cache %1$s: %2$d %%</string>
    <string name="download_failed">Download Error</string>
    <string name="downloading_trail_cache">Downloading Trail Cache</string>
    <string name="trail_already_cached">Trail is already cached\nCache Size: %1$s</string>
    <string name="remove">Remove</string>
    <string name="cancel">Cancel</string>
    <string name="cached">Cached</string>
    <string name="offline_cache">Offline Cache</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="wrong_direction">Wrong Direction</string>
    <string name="trail_lost">Trail Lost</string>
    <string name="download_offline_maps">Download Offline Maps</string>
    <string name="activity_offline_maps_title">Offline Maps</string>
    <string name="activity_offline_maps_download_new_map">DOWNLOAD NEW MAP</string>
    <string name="activity_offline_maps_downloaded_maps">Downloaded Maps</string>
    <string name="activity_offline_maps_no_maps">No Downloaded Maps</string>
    <string name="activity_new_offline_map_title">Pan and zoom to desired extent</string>
    <string name="activity_new_offline_map_image">Include Imagery</string>
    <string name="activity_new_offline_map_include_imagery">Include Imagery</string>
    <string name="activity_new_offline_map_name_hint">Map Name</string>
    <string name="activity_new_offline_map_download">DOWNLOAD</string>
    <string name="activity_new_offline_map_map_too_big">Map too big</string>
    <string name="activity_new_offline_map_max_map_size">Download size must be less than %1$s</string>
    <string name="activity_new_offline_map_missing_name">Name not set</string>
    <string name="activity_offline_maps_menu_cancel">Cancel</string>
    <string name="activity_offline_maps_menu_delete">Delete</string>
    <string name="activity_offline_maps_cancel_download_title">Cancel Download</string>
    <string name="activity_offline_maps_cancel_download_message">Do you really want to cancel offline map \'%1$s\'?</string>
    <string name="activity_offline_maps_delete_download_title">Delete Offline Map</string>
    <string name="activity_offline_maps_delete_download_message">Do you really want to delete offline map \'%1$s\'?</string>
    <string name="activity_offline_maps_menu_update">Update</string>
    <string name="activity_offline_maps_menu_edit">Edit</string>
    <string name="activity_offline_maps_menu_rename">Rename</string>
    <string name="activity_offline_maps_rename_title">Enter New Name</string>
    <string name="activity_offline_maps_rename_newname">New Name</string>
    <string name="activity_offline_maps_menu_resume">Resume</string>
    <string name="activity_offline_maps_menu_pause">Pause</string>
    <string name="download_paused">Paused</string>
    <string name="start_trail_title">Too Far From Trail Head</string>
    <string name="start_trail_message">Start Trail Routing once you are at the beginning of the Trail</string>
    <string name="set_next_waypoint">Set Next Waypoint</string>
    <string name="cannot_determine_next_waypoint">Cannot determine next waypoint. You\'re too far from the trail.</string>
    <string name="navigating_to_wp_number">Navigating to #%1$d</string>
    <string name="select_a_waypoint">Select a Waypoint</string>
    <string name="repeat">Repeat</string>
    <string name="download_waiting">Waiting</string>
    <string name="activity_trip_recording_finish_failed_dialog_title">Failed to finish trip recording</string>
    <string name="activity_trip_recording_cancel_dialog_title">Cancel trip recording?</string>
    <string name="activity_trip_recording_cancel_dialog_message">Do you really want to cancel trip recording?</string>
    <string name="trail_collection_menu_item_cancel_recording">Cancel Recording</string>

    <plurals name="star">
        <item quantity="one">%d Star</item>
        <item quantity="other">%d Stars</item>
    </plurals>
</resources>
