<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/component_basic_tabs"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:tabTextColor="@color/toolbarTextGrayed"
        app:tabSelectedTextColor="@color/toolbarText">

        <com.google.android.material.tabs.TabItem
            android:layout_height="0dp"
            android:layout_width="0dp"
            android:text="@string/community" />

        <com.google.android.material.tabs.TabItem
            android:layout_height="0dp"
            android:layout_width="0dp"
            android:text="@string/my_trips" />

        <com.google.android.material.tabs.TabItem
            android:layout_height="0dp"
            android:layout_width="0dp"
            android:text="@string/discover" />

        <com.google.android.material.tabs.TabItem
            android:layout_height="0dp"
            android:layout_width="0dp"
            android:text="@string/profile" />

    </com.google.android.material.tabs.TabLayout>

</androidx.constraintlayout.widget.ConstraintLayout>