<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.neotreks.accuterra.mobile.demo.offlinemap.OfflineMapsActivity">

    <include
        android:id="@+id/activity_offline_maps_toolbar"
        layout="@layout/general_toolbar"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/activity_offline_maps_download_new_map_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_offline_maps_download_new_map"
        android:drawableLeft="@drawable/ic_download_map_24px"
        android:drawablePadding="@dimen/fab_margin"
        android:paddingHorizontal="@dimen/default_margin"
        android:textColor="@color/colorPrimaryDark"
        style="?android:attr/borderlessButtonStyle"
        android:background="@android:color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_offline_maps_toolbar" />

    <View
        android:id="@+id/activity_offline_maps_separator"
        android:layout_width="match_parent"
        android:layout_height="@dimen/line"
        android:background="@color/colorListSelection"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_offline_maps_download_new_map_button" />
    
    <TextView
        android:id="@+id/activity_offline_maps_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_offline_maps_separator"
        android:paddingHorizontal="@dimen/default_margin"
        android:textColor="@color/colorPrimaryDark"
        android:gravity="center_vertical"
        android:text="@string/activity_offline_maps_downloaded_maps"/>

    <!-- SWIPE refresh -->
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/activity_offline_maps_swipe_refresh"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_offline_maps_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/activity_offline_maps_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <TextView
        android:id="@+id/activity_offline_maps_no_maps_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/activity_offline_maps_no_maps"
        android:textAlignment="center"/>
</androidx.constraintlayout.widget.ConstraintLayout>
