<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.neotreks.accuterra.mobile.demo.DrivingActivity"
    android:keepScreenOn="true"
    android:id="@+id/activity_driving_main_view">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/activity_driving_map_bottom_guideline">

        <com.neotreks.accuterra.mobile.sdk.map.AccuTerraMapView
            android:id="@+id/activity_driving_accuterra_map_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/activity_driving_to_driving_mode_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="8dp"
            android:src="@drawable/ic_location_driving_24px"
            android:tint="@android:color/black"
            android:backgroundTint="@android:color/white"
            android:foregroundTint="@android:color/white"
            android:visibility="gone"
            android:contentDescription="@string/driving_mode"
            app:borderWidth="0dp" />

    </FrameLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/activity_driving_map_bottom_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/activity_driving_list_top_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5"/>

    <FrameLayout
        android:id="@+id/activity_driving_list_button_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="2dp"
        android:outlineProvider="background"
        android:background="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/activity_driving_list_top_guideline">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/activity_driving_show_list_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_blue_light"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:textAllCaps="true"
            android:text="@string/list"
            android:layout_gravity="center"/>

    </FrameLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/activity_driving_sliding_bottom_pane"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:elevation="4dp"
        android:outlineProvider="bounds"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_driving_list_button_wrapper"
        android:background="@android:color/white">

        <ProgressBar
            android:id="@+id/activity_driving_list_loading_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/activity_driving_empty_list_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_records"
            android:layout_centerInParent="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ListView
            android:id="@+id/activity_driving_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            tools:listitem="@layout/poi_list_item" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
