<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorPrimary">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/activity_driving_toolbar_loading_panel"
            android:layout_width="match_parent"
            android:layout_height="56dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                android:lines="1"
                android:ellipsize="end"
                android:text="@string/driving_mode" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/activity_driving_toolbar_trail_name_panel"
            android:layout_width="match_parent"
            android:layout_height="56dp">

            <TextView
                android:id="@+id/activity_driving_toolbar_trail_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                android:lines="1"
                android:ellipsize="end"
                tools:text="The Trail Name" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/activity_driving_toolbar_way_point_panel"
            android:layout_width="match_parent"
            android:layout_height="56dp">

            <TextView
                android:id="@+id/activity_driving_toolbar_way_point_panel_arrow_forward"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                android:text="@string/upwards_arrow_character" />

            <TextView
                android:id="@+id/activity_driving_toolbar_way_point_panel_arrow_backward"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toEndOf="@id/activity_driving_toolbar_way_point_panel_arrow_forward"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                android:text="@string/downwards_arrow_character" />

            <TextView
                android:id="@+id/activity_driving_toolbar_way_point_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/activity_driving_toolbar_way_point_panel_arrow_backward"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="8dp"
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                tools:text="1.2 mi" />

            <TextView
                android:id="@+id/activity_driving_toolbar_way_point_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/activity_driving_toolbar_way_point_distance"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:textAlignment="textEnd"
                android:lines="1"
                android:ellipsize="end"
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                tools:text="Waypoint #2" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>


</androidx.appcompat.widget.Toolbar>